src/snapshots/bvr__tui__tests__snap_time_travel_input_prompt.snap
---
source: src/tui.rs
expression: text
---
bvr | mode=TimeTravel | focus=list | issues=3/3 | filter=all | sort=default | ? help | Tab focus |
┌Diff Categories [focus]─────────────────┐┌Diff Detail─────────────────────────────────────────────┐
│                                        ││                                                        │
│  Enter git ref or file path:           ││                                                        │
│  > HEAD_                               ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
└────────────────────────────────────────┘└────────────────────────────────────────────────────────┘
Time-travel: enter git ref or file path | Enter confirm | Esc cancel
