src/snapshots/bvr__tui__tests__snap_time_travel_medium.snap
---
source: src/tui.rs
expression: text
---
bvr 1 Main b Board i Insights t TimeTravel | mode=TimeTravel | focus=list | issues=3/3 | filter=all
┌Diff Categories [focus]─────────────────┐┌Diff Detail─────────────────────────────────────────────┐
│                                        ││                                                        │
│  No diff loaded. Press t to enter a re ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
└────────────────────────────────────────┘└────────────────────────────────────────────────────────┘
Time-travel: no diff loaded | t to enter ref | Esc back
