src/snapshots/bvr__tui__tests__snap_time_travel_wide.snap
---
source: src/tui.rs
expression: text
---
bvr 1 Main b Board i Insights g Graph h History a Actionable [ Labels ] Flow t TimeTravel | mode=TimeTravel | focus=list | issues=3/3 | filt
┌Diff Categories [focus]────────────────────────────┐┌Diff Detail──────────────────────────────────────────────────────────────────────────┐
│                                                   ││                                                                                     │
│  No diff loaded. Press t to enter a ref.          ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
└───────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────────────────────────────────┘
Time-travel: no diff loaded │ t enter ref │ Esc back
