src/snapshots/bvr__tui__tests__snap_time_travel_with_diff.snap
---
source: src/tui.rs
expression: text
---
bvr 1 Main b Board i Insights t TimeTravel | mode=TimeTravel | focus=list | issues=3/3 | filter=all
┌Diff Categories [focus]─────────────────┐┌Diff Detail─────────────────────────────────────────────┐
│                                        ││                                                        │
│  Diff from: HEAD~1                     ││  New issues                                            │
│  Summary: 3 changes                    ││                                                        │
│                                        ││  > A [open] Root                                       │
│  > New issues (3)                      ││    B [open] Dependent                                  │
│                                        ││    C [closed] Closed                                   │
│  METRIC DELTAS                         ││                                                        │
│    Total issues: +3                    ││                                                        │
│    Open issues:  +2                    ││                                                        │
│    Edges:        +1                    ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
└────────────────────────────────────────┘└────────────────────────────────────────────────────────┘
Time-travel: j/k navigate | Tab focus | T reload | t/Esc back
