src/snapshots/bvr__tui__tests__snap_tree_detail_focus.snap
---
source: src/tui.rs
expression: text
---
bvr 1 Main b Board i Insights T Tree | mode=Tree | focus=detail | issues=3/3 | filter=all |
┌Dependency Tree─────────────────────────┐┌Issue Detail [focus]────────────────────────────────────┐
│                                        ││                                                        │
│ Dependency tree (3 nodes) | Enter expa ││ ID: A                                                  │
│                                        ││ Title: Root                                            │
│ > [-] o P0 A Root ↓1                   ││ Status: open                                           │
│    |   `-     o P0 B Dependent ⊘1      ││ Type: task                                             │
│       x P0 C Closed                    ││ Depth: 0                                               │
│                                        ││ Labels: core, parity                                   │
│                                        ││                                                        │
│                                        ││ Dependents (1):                                        │
│                                        ││   B - Dependent                                        │
│                                        ││                                                        │
│                                        ││ Description:                                           │
│                                        ││ Top-level issue that unblocks downstream work once the │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
└────────────────────────────────────────┘└────────────────────────────────────────────────────────┘
Tree: 3 nodes | j/k navigate | Enter expand/collapse | Tab focus | T/Esc back
