src/snapshots/bvr__tui__tests__snap_tree_medium.snap
---
source: src/tui.rs
expression: text
---
bvr 1 Main b Board i Insights T Tree | mode=Tree | focus=list | issues=3/3 | filter=all |
┌Dependency Tree [focus]─────────────────┐┌Issue Detail────────────────────────────────────────────┐
│                                        ││                                                        │
│ (no dependency tree — all issues are i ││ (no node selected)                                     │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
└────────────────────────────────────────┘└────────────────────────────────────────────────────────┘
Tree: 0 nodes | j/k navigate | Enter expand/collapse | Tab focus | T/Esc back
