src/snapshots/bvr__tui__tests__snap_tree_narrow.snap
---
source: src/tui.rs
expression: text
---
bvr 1 Main b Board i In g Graph h Hist T Tree  | 3/3 | all
┌Dependency Tree [fo┐┌Issue Detail─────────────────────────┐
│                   ││                                     │
│ (no dependency tr ││ (no node selected)                  │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
└───────────────────┘└─────────────────────────────────────┘
Tree: 0 nodes | j/k navigate | Enter expand/collapse | Tab f
