src/snapshots/bvr__tui__tests__snap_tree_wide.snap
---
source: src/tui.rs
expression: text
---
bvr 1 Main b Board i Insights g Graph h History a Actionable [ Labels ] Flow T Tree | mode=Tree | focus=list | issues=3/3 | filter=all | sor
┌Dependency Tree [focus]────────────────────────────┐┌Issue Detail─────────────────────────────────────────────────────────────────────────┐
│                                                   ││                                                                                     │
│ (no dependency tree — all issues are independent) ││ (no node selected)                                                                  │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
└───────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────────────────────────────────┘
Tree: 0 nodes │ j/k navigate │ Enter expand/collapse │ Tab focus │ T/Esc back
